# Optisnap-spritefont

./: README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml  test.yml
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ImageUploader.tsx  PreviewPanel.tsx  SpacingAdjuster.tsx  SuccessDialog.tsx  TitleBar.tsx
src/components/ui/: dialog.tsx
src/config/: index.ts
